--- a/css/index.css
+++ b/css/index.css
@@ -54,8 +54,12 @@ a.icon-remove-sign:hover {
 }
 
 img {
-  border-radius: 42px 0;
   max-width: 100%;
+}
+
+blockquote {
+  color: #666;
+  font-style: italic;
 }
 
 /**
