--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,13 @@ section {
  * Animations
  */
 
+.shake {
+  -webkit-animation-name: shake 1s;
+  -moz-animation-name: shake 1s;
+  -o-animation-name: shake 1s;
+  animation-name: shake 1s;
+}
+
 @-webkit-keyframes down {
   from {
     opacity: 0;
@@ -201,6 +208,30 @@ section {
     opacity: 1;
     -webkit-transform: translate(0, 0) scale(1);
   }
+}
+
+@-webkit-keyframes shake {
+  0%, 100% {-webkit-transform: translateX(0);}
+  10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
+  20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
+}
+
+@-moz-keyframes shake {
+  0%, 100% {-moz-transform: translateX(0);}
+  10%, 30%, 50%, 70%, 90% {-moz-transform: translateX(-10px);}
+  20%, 40%, 60%, 80% {-moz-transform: translateX(10px);}
+}
+
+@-o-keyframes shake {
+  0%, 100% {-o-transform: translateX(0);}
+  10%, 30%, 50%, 70%, 90% {-o-transform: translateX(-10px);}
+  20%, 40%, 60%, 80% {-o-transform: translateX(10px);}
+}
+
+@keyframes shake {
+  0%, 100% {transform: translateX(0);}
+  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
+  20%, 40%, 60%, 80% {transform: translateX(10px);}
 }
 
 /**
