Update Redactional in CV

--- a/css/font.css
+++ b/css/font.css
@@ -6,6 +6,9 @@
  * (c) Jérémie Taboada - <taboada.jeremie@gmail.com>
  */
 
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Oswald);
+
 /**
  * Font yanone - http://www.yanone.de/typedesign/kaffeesatz/
  */
