--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
 body {
   margin: 0 auto;
   max-width: 1200px;
-  font-family: sans-serif;
+  font-family: 'Droid Sans', sans-serif;
   font-size: 1.2em;
   padding: 5px 2px 2px 5px;
   padding: 42px;
