--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-/*!
- * index.css
- * https://github.com/JeremieT/jeremiet.github.com
- * MIT licensed
- *
- * (c) Jérémie Taboada - <taboada.jeremie@gmail.com>
- */
 
 /**
  * Imports
@@ -29,6 +22,7 @@ body {
   font-size: 1.2em;
   padding: 5px 2px 2px 5px;
   padding: 42px;
+  color: #111;
 }
 
 a:not(.img) {
@@ -71,6 +65,10 @@ pre {
 
 ul {
   list-style-type: square;
+}
+
+p, ul, ol {
+  color: #444;
 }
 
 /**
