--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,8 @@ p, ul, ol {
  */
 
 h1, h2, h3 {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
   margin: .15em 0;
 }
 
@@ -107,13 +108,11 @@ h1 {
 h2 {
   color: #666;
   font-size: 3em;
-  font-weight: normal;
 }
 
 h3 {
   color: #888;
   font-size: 2em;
-  font-weight: 300;
 }
 
 header {
@@ -285,7 +284,7 @@ section {
 }
 
 .article.card .title {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-family: 'Oswald', sans-serif;
   display: block;
   font-size: 2em;
   color: white;
