--- a/styles/web/index.css
+++ b/styles/web/index.css
@@ -130,23 +130,28 @@ background:#edecdc;
 border:none;
 }
 nav > a[href^="#"]:active {
-box-shadow: inset 0 1px 10px rgba(0, 0, 0, .2);
+  background:#d9d8c9;
 }
 nav > a[href^="#"] > div[class^="icon-"]{
-font-size:5em;
+font-size:8em;
 /*transition*/
 -webkit-transition:.5s;
    -moz-transition:.5s;
      -o-transition:.5s;
         transition:.5s;
+-webkit-transform:scale(0.6);
+   -moz-transform:scale(0.6);
+    -ms-transform:scale(0.6);
+     -o-transform:scale(0.6);
+        transform:scale(0.6);
 }
 nav > a[href^="#"]:hover > div[class^="icon-"]{
 /*transform*/
--webkit-transform:scale(1.4);
-   -moz-transform:scale(1.4);
-    -ms-transform:scale(1.4);
-     -o-transform:scale(1.4);
-        transform:scale(1.4);
+-webkit-transform:scale(1);
+   -moz-transform:scale(1);
+    -ms-transform:scale(1);
+     -o-transform:scale(1);
+        transform:scale(1);
 }
 nav > a[href^="#"] > div.name{
 font-weight:bold;
@@ -235,15 +240,11 @@ box-sizing:border-box;
    -moz-transition:.5s;
      -o-transition:.5s;
         transition:.5s;
-box-shadow: 1px 0 5px rgba(0, 0, 0, .5);
 padding:1em 0;
 }
 .card:hover{
 color:#222 !important;
 background:#619bbf;
-}
-.card:active {
-box-shadow: inset 1px 0 10px rgba(0, 0, 0, .3);
 }
 .card > [class^="icon-"], .card .title{
 /*transition*/
@@ -253,16 +254,21 @@ box-shadow: inset 1px 0 10px rgba(0, 0, 0, .3);
         transition:.5s;
 color:white;
 /* overide a color */
+-webkit-transform:scale(0.75);
+   -moz-transform:scale(0.75);
+    -ms-transform:scale(0.75);
+     -o-transform:scale(0.75);
+        transform:scale(0.75);
 :;
 }
 .card:hover > [class^="icon-"], .card:hover .title{
 color:#222;
 /*transform*/
--webkit-transform:scale(1.4);
-   -moz-transform:scale(1.4);
-    -ms-transform:scale(1.4);
-     -o-transform:scale(1.4);
-        transform:scale(1.4);
+-webkit-transform:scale(1);
+   -moz-transform:scale(1);
+    -ms-transform:scale(1);
+     -o-transform:scale(1);
+        transform:scale(1);
 }
 /**
  * Articles
