--- a/styles/common/font.css
+++ b/styles/common/font.css
@@ -1,6 +1,6 @@
 
-/*@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);*/
-/*@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,700);*/
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300,700);
 @font-face {
   font-family: "FontAwesome";
   src: url('/resources/fonts/fontawesome-webfont.eot');
