Update packaging to work in gh-page files structure.

--- a/src/partials/layout.jade
+++ b/src/partials/layout.jade
@@ -4,13 +4,12 @@ html(lang="en-US")
     meta(charset="UTF-8")
     //- TODO(jeremie) Add mobile device meta-data
     title Jeremie Taboada's website
-    link(rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css")
-    link(rel="stylesheet" href="vendors/feather/feather.css")
-    link(rel="stylesheet" href="index.css")
+    link(rel="stylesheet" href="app/bower_components/font-awesome/css/font-awesome.css")
+    link(rel="stylesheet" href="app/index.css")
   body(ng-app="app")
     block content
-    script(src="bower_components/ace-builds/src-min-noconflict/ace.js")
-    script(src="bower_components/angular/angular.js")
-    script(src="bower_components/angular-ui-ace/ui-ace.js")
-    script(src="bower_components/angular-route/angular-route.js")
-    script(src="scripts/index.js")
+    script(src="app/bower_components/ace-builds/src-min-noconflict/ace.js")
+    script(src="app/bower_components/angular/angular.js")
+    script(src="app/bower_components/angular-ui-ace/ui-ace.js")
+    script(src="app/bower_components/angular-route/angular-route.js")
+    script(src="app/scripts/index.js")
