--- a/src/markup/lab_article.jade
+++ b/src/markup/lab_article.jade
@@ -3,5 +3,4 @@ btn(icon="close" href="#/lab" id="close")
 header
   h1 {{articles[name]}}
 
-article(ng-include="'app/pages/lab/' + name + '.html'")
-
+article(ng-include="'app/lab/' + name + '.html'")
