Add cpp11_property article.

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -33,6 +33,13 @@ h1, h2, h3, h4
   font-family "Varela Round" sans-serif
   font-weight normal
 
+table
+  border-collapse collapse
+  margin-bottom 20px
+  th, td
+    border 1px solid #ccc
+    padding 10px
+
 h1
   font-size 3em
   text-align center
