--- a/app/index.css
+++ b/app/index.css
@@ -19,6 +19,15 @@ h4 {
   font-family: "Varela Round" sans-serif;
   font-weight: normal;
 }
+table {
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+table th,
+table td {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
 h1 {
   font-size: 3em;
   text-align: center;
