--- a/jeremt-style/base-typography.css
+++ b/jeremt-style/base-typography.css
@@ -39,7 +39,8 @@ html /deep/ h4 {
  */
 html /deep/ p,
 html /deep/ ul,
-html /deep/ ol {
+html /deep/ ol,
+html /deep/ table {
     color: #666;
 }
 
