--- a/jeremt-style/theme-typography.css
+++ b/jeremt-style/theme-typography.css
@@ -4,7 +4,7 @@
 @import url(maxwell-font/stylesheet.css);
 @import url(http://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic);
 @import url(http://fonts.googleapis.com/css?family=Source+Code+Pro);
-@import url(../../font-awesome/css/font-awesome.css);
+@import url(../bower_components/font-awesome/css/font-awesome.css);
 
 html {
     font-family: "Lato", sans-serif;
