--- a/jeremt-title/jeremt-title.css
+++ b/jeremt-title/jeremt-title.css
@@ -2,7 +2,7 @@
     font-family: maxwell_regular, sans-serif;
     font-size: 4em;
     fill: #eeeeee;
-    text-shadow: 10px 10px 0 #222;
+    /*text-shadow: 10px 10px 0 #222;*/
     /*fill: transparent;*/
     /*stroke: #eeeeee;*/
     /*stroke-width: 1px;*/
