--- a/index.css
+++ b/index.css
@@ -51,14 +51,14 @@ html, body {
     display: flex;
 }
 
-#contact a {
+#contact > a {
     display: flex;
     width: 50px;
     border: 3px solid #222222;
     height: 50px;
     padding: 10px;
+    transform: none;
     box-sizing: border-box;
-    transition: .3s all;
     border-radius: 50%;
 }
 
@@ -84,7 +84,6 @@ html, body {
     padding: 8px 15px;
     margin-top: 20px;
     font-size: 1.2rem;
-    transition: .3s all;
     font-weight: 700;
     border-radius: 25px;
     text-decoration: none;
@@ -158,7 +157,6 @@ h2 {
     margin: 0 10px;
     padding: 5px 10px;
     font-size: .9rem;
-    transition: .3s all;
     font-weight: 700;
     border-radius: 25px;
     text-decoration: none;
@@ -185,4 +183,54 @@ h2 {
     #grid {
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+/* Animations */
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+#presentation > img {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards;
+}
+
+#presentation > h1 {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 0.2s;
+}
+
+#presentation > p {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 0.4s;
+}
+
+#contact > a[title="Github"] {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 0.6s;
+}
+
+#contact > a[title="LinkedIn"] {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 0.7s;
+}
+#contact > a[title="Instagram"] {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 0.8s;
+}
+#contact > a[title="Resume"] {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 0.9s;
+}
+
+#presentation > .btn {
+    opacity: 0;
+    animation: 0.5s appear ease-in-out forwards 1s;
 }
