--- a/index.css
+++ b/index.css
@@ -49,7 +49,8 @@ html, body {
 
 .btn {
     color: #ffffff;
-    background-color: #635CDD;
+    background: linear-gradient(93.93deg, rgba(217, 94, 146, 0.2) 5.62%, rgba(217, 94, 146, 0) 80.06%), linear-gradient(180deg, #648BDC 0%, #756EED 100%);
+    box-shadow: 0px 4px 10px rgba(101, 139, 221, 0.5);
     padding: 10px 20px;
     margin-top: 10px;
     margin-bottom: 15px;
