--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ html, body {
 
 .btn {
     color: #ffffff;
-    background: linear-gradient(93.93deg, rgba(217, 94, 146, 0.2) 5.62%, rgba(217, 94, 146, 0) 80.06%), linear-gradient(180deg, #648BDC 0%, #756EED 100%);
+    background-image: linear-gradient(93.93deg, rgba(217, 94, 146, 0.2) 5.62%, rgba(217, 94, 146, 0) 80.06%), linear-gradient(180deg, #648BDC 0%, #756EED 100%);
     box-shadow: 0px 4px 10px rgba(101, 139, 221, 0.5);
     padding: 10px 20px;
     margin-top: 10px;
@@ -58,12 +58,11 @@ html, body {
     font-weight: 700;
     border-radius: 10px;
     text-decoration: none;
-    transition: .3s all;
+    transition: 0.5s box-shadow;
 }
 
 .btn:hover {
-    background-color: #7873cf;
-    border-radius: 15px;
+    box-shadow: 0px 4px 20px rgba(101, 139, 221, 0.7);
 }
 
 .btn:active {
